src/components/Modal/ModalHeader/ModalHeader.module.scss
@import "../../../styles/typography";

.container {
  margin-block-start: var(--spacing-medium);

  .icon {
    vertical-align: middle;
    margin-right: var(--spacing-small);
  }

  .description {
    @include theme-prop(color, secondary-text-color);
  }

  .closeButton {
    position: absolute;
    right: 20px;
    top: 20px;
  }
}

